# microshare-erp-integration

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELETION_LOG.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  README.md  deployment_validation_20250914_154815.json  deployment_validation_20250914_163538.json  deployment_validation_20250915_064547.json  deployment_validation_20250915_071047.json  deployment_validation_20250915_071701.json  deployment_validation_20250915_073354.json  deployment_validation_20250915_080524.json  deployment_validation_20250915_135412.json  deployment_validation_20250915_164950.json  docker-compose.dev.yml  docker-compose.yml  erp_sync_documentation.md  microshare_device_crud.md  optimized_performance_testing.py  performance_testing.py  pyproject.toml  pytest.ini  quick_install.sh  requirements.txt  start_and_validate.py  start_api.py  test_endpoints.py  test_frontend.py  test_guid_crud_operations.py  validate_deployment.py  validate_setup.py
api/: main.py
api/auth/: auth.py  middleware.py  web_client.py
api/config/: settings.py
api/core/: http_client.py
api/devices/: client.py  crud.py  enhanced_cache_manager.py  models.py  operations.py  optimized_crud.py  optimized_routes.py  router.py  routes.py
docs/: API_REFERENCE.md  ERP_SYNC_DOCUMENTATION_UPDATED.md  MICROSHARE_CREDENTIALS.md  MICROSHARE_DEVELOPER_IMPLEMENTATION_GUIDE.md  QUICKSTART.md  erp_sync_documentation.md
docs/archived/: README.md
frontend/: async_crud_test.html  bak.dashboard.html.202509140719.html  dashboard-new.html  dashboard.html  dashboard_v2_backup_20250914_062040.html  debug.html  import.html  index.html  test.html
frontend/components/: add-device-form.html  device-card.html  login-form.html
frontend/css/: app.css  components.css
frontend/js/: app.js  auth-fixed.js  auth.js  config.js  devices.js  ui.js
scripts/: performance_benchmark.py  performance_benchmark_20250915_145423.json  setup_environment.py  start_frontend.py  validate_deployment.py  validate_deployment.sh
services/integration-api/: Dockerfile  dependencies.py  main.py
services/integration-api/routes/: device_crud.py  erp_discovery.py  erp_sync.py  erp_sync.py.bak  health.py
src/erp_adapter/: field_mapping.py  sync_patterns.py
src/microshare_client/: cache.py  client.py  enums.py  exceptions.py  models.py
tests/: conftest.py
tests/integration/: test_device_crud.py  test_microshare_crud_integration.py
(+2 files in other folders)
